--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,7 @@ override.tf.json
 # Ignore CLI configuration files
 .terraformrc
 terraform.rc
+
+# Ignore lockfile since oci provider is always updating
+# and it negatively affect new users of this project
+.terraform.lock.hcl
